# the-boring-data-project

./: .env.example  .firebaserc  .gitignore  README.md  SPEC.md  firebase.json  firestore.rules  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml  smoke.yml  sync.yml
analytics/queries/: affiliate_clicks_by_component.sql  crawl_vs_traffic_gap.sql  revenue_proxy_by_make.sql
docs/: VERTICALS.md
etl/: pyproject.toml
etl/data/: aliases.yaml  vpic_makes.json
etl/data/layouts/: CMPL.txt
etl/src/etl/: __init__.py  build_pages.py  build_sqlite.py  cli.py  config.py  diff.py  download.py  layouts.py  normalize.py  parse.py  push_firestore.py  sitemaps.py  smoke.py  verify.py  vpic.py
etl/tests/: conftest.py  test_automation.py  test_layouts.py  test_normalize.py  test_pipeline.py  test_smoke.py
scripts/: firestore-stub.py  measure-cls.mjs  verify-phase4.py  verify-site.py
scripts/fixtures/: phase4-pages.jsonl
site/: Dockerfile  astro.config.mjs  package.json
site/public/: ads.txt  robots.txt
site/src/: env.d.ts
site/src/components/: AdSlot.astro  AffiliateBlock.astro  Analytics.astro  AnswerBox.astro  Breadcrumbs.astro  ComplaintStats.astro  ConsentBanner.astro  MetricStat.astro  RecallCard.astro  SearchBox.astro
site/src/data/: affiliate-map.json
site/src/layouts/: Layout.astro
site/src/lib/: cache.ts  firestore.ts  ga.ts  seo.ts  slug.ts
site/src/pages/: 404.astro  about.astro  index.astro  methodology.astro  privacy.astro
site/test/: firestore.test.ts  ga.test.ts  rules.test.ts  seo.test.ts  slug.test.ts
(+5 files in other folders)
