[project]
name = "etl"
version = "0.1.0"
description = "RecallLookup ETL: NHTSA flat files -> Firestore page documents"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.17",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "google-cloud-firestore>=2.19",
]

[project.scripts]
etl = "etl.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
